remove padding from app-view

--- a/client/style.css
+++ b/client/style.css
@@ -9,7 +9,7 @@ body {
 
 #app-view {
     margin: 0 auto;
-    padding: 20px;
+    /* padding: 20px; */
     background-color: #2f3136;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
