--- a/client/style.css
+++ b/client/style.css
@@ -1,8 +1,13 @@
-/* Note: ChatGPT helped with viewport specs and minor details */
+@font-face {
+    font-family: 'RobotoMono';
+    src: url('assets/RobotoMono-VariableFont_wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
     margin: 0;
-    font-family: 'Arial', 'Helvetica', sans-serif;
+    font-family: 'RobotoMono', monospace;
     background-color: #36393f;
     color: #fff;
 }
@@ -52,7 +57,7 @@ body {
 
 .menu-item a {
     display: block;
-    padding: 15px;
+    padding: 20px;
     text-align: center;
     text-decoration: none;
     color: #fff;
@@ -80,13 +85,13 @@ body {
 #page-view {
     background-color: #2f3136;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
-    padding: 20px;
+    margin: 0 10px 10px 10px;
+    padding: 0 20px 20px 20px;
     border-radius: 10px;
 }
 
 .content {
-    max-width: 600px;
+    max-width: 750px;
     margin: 0 auto;
 }
 
@@ -122,12 +127,11 @@ body {
     text-align: center;
 }
 
-#room-name {
+.room-name {
     width: calc(70% - 200px);
     padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin-right: 20px;
+    margin: 20px;
+    font-weight: bold;
 }
 
 button {
@@ -149,12 +153,16 @@ button:hover {
 
 .message-list {
     margin-top: 20px;
+    overflow-y: scroll;
+    height: 60vh;
+    font-size: 14px;
+    padding: 15px;
 }
 
 .message {
     background-color: #40444b;
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 15px;
+    margin: 10px 0 10px 0;
     border-radius: 5px;
     clear: both;
     float: left;
@@ -162,22 +170,13 @@ button:hover {
 }
 
 .my-message {
-    background-color: #7289da;
+    background-color: #7689c9;
     color: #fff;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
     float: right;
     clear: both;
-}
-
-textarea {
-    font-family: inherit;
-    width: calc(100% - 20px);
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin-bottom: 10px;
 }
 
 /* Profile Form Styles */
@@ -202,13 +201,31 @@ textarea,
 input[type="file"] {
     width: calc(100% - 20px);
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #dddddd00;
     border-radius: 5px;
     margin-bottom: 10px;
     color: #fff;
-    background-color: #40444b;
+    background-color: rgb(56, 58, 63);
+    outline: none;
+    height: 30px;
+    line-height: 30px;
+    resize: none;
+    text-indent: 15px;
 }
 
 input[type="file"] {
     padding: 5px;
+}
+
+.message-list::-webkit-scrollbar {
+    width: 6px;
+}
+
+.message-list::-webkit-scrollbar-thumb {
+    background-color: rgba(26, 27, 30, 0.754);
+    border-radius: 6px;
+}
+
+.message-list::-webkit-scrollbar-track {
+    background-color: transparent;
 }
