--- a/client/style.css
+++ b/client/style.css
@@ -233,3 +233,42 @@ input[type="file"] {
 #app-view + div {
     color: black;
 }
+
+/* pdf doc upload */
+
+#dragdropzone {
+    border: 3px dashed #5f17ef;
+    background-color: #c0ace9;
+    text-align: center;
+    /* padding: 25px; */
+    padding: 10px 20px;
+    /* transition: background-color 0.3s ease; */
+    cursor: pointer;
+    position: relative;
+    border-radius: 5px;
+    width:50%;
+    height: 10%;
+    margin:10px 20px;
+}
+
+#dragdropzone .dropzone-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#dragdropzone i {
+    font-size: 48px;
+    color: #888;
+}
+
+#dragdropzone p {
+    font-size: 16px;
+    margin-top: 10px;
+    color: #888;
+}
+
+#dragdropzone.active {
+    border-color: #3498db;
+    background-color: #ecf0f1;
+}
