--- a/client/style.css
+++ b/client/style.css
@@ -155,7 +155,7 @@ button:hover {
 .message-list {
     margin-top: 20px;
     overflow-y: scroll;
-    height: 40vh;
+    height: 45vh;
     font-size: 14px;
     padding: 15px;
 }
@@ -294,6 +294,7 @@ input[type="file"] {
     flex-direction: column;
     justify-content: center;
     width: 50%;
+    margin-top: 10px;
 }
 
 .dropbox-buttons {
